fix: clear trashcode

--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,65 @@
+# Ambiente virtual do Python
 .venv
 env
 venv
 
-node_modules
-
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
+# Dependências do frontend
+frontend/node_modules
+frontend/.pnp
 .pnp.js
 .yarn/install-state.gz
 
-# testing
+# Arquivos de cobertura de testes
 /coverage
 
-# next.js
+# Diretórios de build do Next.js
 /.next/
 /out/
 
-# production
+# Diretórios de build de produção
 /build
 
-# misc
+# Diretórios de cache do frontend
+frontend/.cache
+frontend/.next
+frontend/.out
+frontend/.parcel-cache
+frontend/.vercel
+frontend/.netlify
+
+# Arquivos diversos
 .DS_Store
 *.pem
 
-# debug
+# Logs de debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+# Arquivos de configuração do editor
+.vscode/
+.idea/
 
-# vercel
-.vercel
+# Arquivos de cache do Python
+__pycache__/
+*.py[cod]
+*$py.class
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Arquivos de cache do sistema
+*.swp
+*.swo
+
+# Arquivos de configuração do sistema
+*.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Arquivos de lock do pip
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Arquivos de lock do npm/yarn
+package-lock.json
+yarn.lock
